<resources>
    <!--LOGIN PAGE-->
    <string name="app_name"><u><b><i>Orderly</i></b></u></string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_second_password">Reenter Password</string>
    <string name="login_hint_password">Password</string>
    <string name="login_loginbutton_text">Log in</string>

    <!--SIGN UP PAGE-->
    <string name="signup_hint_namesurname">Name Surname</string>
    <string name="signup_hint_project_title">Project Title</string>
    <string name="sign_up_button_text"><u><b><i>Sign Up</i></b></u></string>
    <string name="sign_up_link"><u>still not registered?</u></string>

    <!--PROJECT ENTRY PAGE-->
    <string name="create_project_text">Create New Project</string>
    <string name="enter_project_text">Enter Existing Project</string>
    <string name="project_code_text">project code</string>


    <string name="home_page">Home</string>
    <string name="profile_page">Profile</string>
    <string name="favorite_page">Favorite</string>

    <!--Floating button explanation-->
    <string name="floating_button_description">Add new question</string>

    <!--ADD QUESTION PAGE-->
    <string name="addquestion_title_text">Title</string>
    <string name="addquestion_content_text">Content</string>
    <string name="addquestion_cancelbutton_text">Cancel</string>
    <string name="addquestion_type_text">Type</string>
    <string name="addquestion_page">Add Question</string>

    <!--CREATE PROJECT PAGE-->
    <string name="createproject_projectname_text">Project Name</string>
    <string name="createproject_projectcode_text">Project Code</string>
    <string name="createproject_createprojectbutton_text">Create Project</string>
    <string name="answer_card_button">Answer</string>
</resources>