<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/logincomponentsbg"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:id="@+id/loginAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="75dp"
        android:textSize="24sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:text="@string/app_name"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:hint="@string/login_hint_email"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:background="@drawable/logincomponentsbg"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="30dp"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:hint="@string/login_hint_password"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logincomponentsbg"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:textAlignment="center"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_loginbutton_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:onClick="loginButtonOnClick" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="75dp"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:text="@string/sign_up_link"
        android:clickable="true"
        android:focusable="true"
        android:onClick="signUpLink"
        />


</LinearLayout>