<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/logincomponentsbg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:paddingBottom="90dp"
        android:paddingTop="90dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:hint="@string/login_hint_email"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:background="@drawable/logincomponentsbg"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="30dp"
        android:textSize="16sp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:hint="@string/login_hint_password"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logincomponentsbg"/>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:textAlignment="center"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_loginbutton_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"/>

</LinearLayout>