<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreateNewProjectActivity"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/projectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:hint="@string/createproject_projectname_text"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:background="@drawable/logincomponentsbg"
        android:inputType="textEmailAddress" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/createNewProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginEnd="35dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/addquestion_page"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:onClick="createProjectOnClick" />

        <Button
            android:id="@+id/cancel_project_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:textAlignment="center"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/addquestion_cancelbutton_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:onClick="cancelProjectOnClick"
            android:layout_toEndOf="@id/createNewProject"/>

    </RelativeLayout>


</LinearLayout>